src/main/java/com/example/challenge/userlogin/error/exception/NotFoundException.java
package com.example.challenge.userlogin.error.exception;

public class NotFoundException extends Exception {
}
